--- a/source/sass/blocks/menu-hide.scss
+++ b/source/sass/blocks/menu-hide.scss
@@ -47,4 +47,19 @@
   }
 }
 
+// если js не актиыен\сломался и тп
+.menu-hide__burger-hidden {
+  display: none;
+}
+
+.menu-hide-hidden {
+  margin-top: -73px;
+}
+
+.menu-hide__logo-hidden {
+  position: relative;
+  top: 59px;
+}
+// если js не актиыен\сломался и тп
+
 // Навигационное меню (закрытое) end //
