--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -190,6 +190,32 @@
   }
 }
 
+.menu__items-logo-tablet-desktop:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+  @media (min-width: $tablet-width) {
+    margin: -1px;
+
+    padding: 0;
+
+    width: 1px;
+    height: 1px;
+
+    position: fixed;
+
+    border: 0;
+
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
+}
+
+.menu__items-logo__mobile {
+  display: none;
+}
+
 .menu__items-bottom {
   position: relative;
 
@@ -235,8 +261,10 @@
   }
 
   @media (min-width: $desktop-width) {
-    width: 186.6px;
-    height: 96.43px;
+    width: 187px;
+    height: 97px;
+
+    background-image: url("../img/logotype-desktop.svg");
 
     position: absolute;
     right: -40px;
