--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -271,6 +271,21 @@ input[type="radio"].visually-hidden {
   }
 }
 
+.menu__logo-triangle-desktop {
+  display: none;
+
+  @media (min-width: $desktop-width) {
+    display: block;
+  }
+}
+
+.menu__logo-master {
+  @media (min-width: $desktop-width) {
+    position: relative;
+    bottom: 97px;
+  }
+}
+
 .menu__hidden {
   display: none;
 }
