--- a/source/sass/blocks/sedona.scss
+++ b/source/sass/blocks/sedona.scss
@@ -44,6 +44,14 @@
   }
 }
 
+.sedona__no-js {
+  background-position-y: -169px;
+
+  @media (min-width: $tablet-width) {
+    background-position-y: -229px;
+  }
+}
+
 .sedona__wrapper {
   padding-top: 52px;
   padding-right: 20px;
@@ -59,5 +67,29 @@
 
   @media (min-width: $desktop-width) {
     padding-top: 100px;
+  }
+}
+
+.sedona__wrapper-no-js {
+  padding-top: 107px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 93px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 99px;
+  }
+}
+
+.sedona__header-background-form {
+  @media (min-width: $tablet-width) {
+    width: 457px;
+    height: 78px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 460px;
+    height: 80px;
   }
 }
