--- a/source/sass/blocks/reasons.scss
+++ b/source/sass/blocks/reasons.scss
@@ -250,7 +250,7 @@
 .reasons__city {
   display: block;
 
-  background-color: #fcfcfc;
+  background-color: $lite-grey-color;
   background-image: url("../img/city-index-mobile-1x.jpg");
   background-repeat: no-repeat;
   background-position: center;
@@ -263,6 +263,7 @@
   height: 260px;
 
   @media (min-resolution: 2dppx) {
+    background-color: $lite-grey-color;
     background-image: url("../img/city-index-mobile-2x.jpg");
     background-size: 520px auto;
   }
@@ -274,12 +275,14 @@
     height: 256px;
 
     @media (min-resolution: 2dppx) {
+      background-color: $lite-grey-color;
       background-image: url("../img/city-index-tablet-2x.jpg");
       background-size: 512px auto;
     }
   }
 
   @media (min-width: $desktop-width) {
+    background-color: $lite-grey-color;
     background-image: url("../img/city-index-desktop-1x.jpg");
 
     width: 800px;
@@ -287,6 +290,7 @@
     height: 256px;
 
     @media (min-resolution: 2dppx) {
+      background-color: $lite-grey-color;
       background-image: url("../img/city-index-desktop-2x.jpg");
       background-size: 800px auto;
     }
@@ -299,7 +303,7 @@
 
   min-height: 416px;
 
-  padding-top: 12px;
+  padding-top: 19px;
 
   @media (min-width: $tablet-width) {
     min-height: 390px;
@@ -464,7 +468,7 @@
 .reasons__devil {
   display: block;
 
-  background-color: #fcfcfc;
+  background-color: $lite-grey-color;
   background-image: url("../img/bridge-index-mobile-1x.jpg");
   background-repeat: no-repeat;
   background-position: center;
@@ -477,6 +481,7 @@
   height: 260px;
 
   @media (min-resolution: 2dppx) {
+    background-color: $lite-grey-color;
     background-image: url("../img/bridge-index-mobile-2x.jpg");
     background-size: 520px auto;
   }
@@ -488,6 +493,7 @@
     height: 256px;
 
     @media (min-resolution: 2dppx) {
+      background-color: $lite-grey-color;
       background-image: url("../img/bridge-index-tablet-2x.jpg");
       background-size: 512px auto;
     }
@@ -502,6 +508,7 @@
     height: 256px;
 
     @media (min-resolution: 2dppx) {
+      background-color: $lite-grey-color;
       background-image: url("../img/bridge-index-desktop-2x.jpg");
       background-size: 800px 270px;
       background-position-y: -3px;
