--- a/source/sass/blocks/bottom.scss
+++ b/source/sass/blocks/bottom.scss
@@ -17,6 +17,7 @@
   @media (min-width: $tablet-width) {
     min-height: 120px;
 
+    padding-top: 4px;
     padding-right: 20px;
     padding-left: 30px;
 
@@ -26,14 +27,25 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding-top: 3px;
+    padding-top: 10px;
     padding-right: 0;
     padding-left: 0;
 
     position: relative;
-    bottom: 6px;
+    bottom: 5px;
 
     background-color: $white-color;
+  }
+}
+
+.bottom-no-js {
+  @media (min-width: $tablet-width) {
+    padding-top: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    position: relative;
+    bottom: 6px;
   }
 }
 
@@ -59,7 +71,7 @@
   margin-top: 33px;
 
   @media (min-width: $tablet-width) {
-    margin-top: 52px;
+    margin-top: 49px;
 
     min-height: 91px;
   }
