--- a/source/sass/blocks/city.scss
+++ b/source/sass/blocks/city.scss
@@ -14,6 +14,7 @@
   height: 214px;
 
   @media (min-resolution: 2dppx) {
+    background-color: $lite-grey-color;
     background-image: url("../img/background-catalog-mobile-2x.jpg");
     background-size: 901px auto;
   }
@@ -32,6 +33,7 @@
     height: 518px;
 
     @media (min-resolution: 2dppx) {
+      background-color: $lite-grey-color;
       background-image: url("../img/background-catalog-tablet-desktop-2x.jpg");
       background-size: 1200px auto;
     }
@@ -43,7 +45,7 @@
 }
 
 .city__no-js {
-  background-position-y: 0;
+  background-position-y: -53px;
 
   @media (min-width: $tablet-width) {
     background-position-y: -230px;
@@ -74,7 +76,7 @@
 }
 
 .city__wrapper-no-js {
-  padding-top: 108px;
+  padding-top: 57px;
 
   @media (min-width: $tablet-width) {
     padding-top: 91px;
