--- a/source/sass/blocks/welcome.scss
+++ b/source/sass/blocks/welcome.scss
@@ -18,6 +18,7 @@
   align-items: center;
 
   @media (min-resolution: 2dppx) {
+    background-color: $lite-grey-color;
     background-image: url("../img/background-index-mobile-2x.jpg");
     background-size: 901px auto;
   }
@@ -41,6 +42,7 @@
     height: 518px;
 
     @media (min-resolution: 2dppx) {
+      background-color: $lite-grey-color;
       background-image: url("../img/background-index-tablet-desktop-2x.jpg");
       background-size: 1200px auto;
     }
@@ -63,6 +65,7 @@
     height: 518px;
 
     @media (min-resolution: 2dppx) {
+      background-color: $lite-grey-color;
       background-image: url("../img/background-index-tablet-desktop-2x.jpg");
       background-size: 1200px auto;
     }
