--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -48,8 +48,13 @@
 }
 
 .map__frame {
+  border: none;
+
+  width: 100%;
+  min-height: 354px;
+
   @media (min-width: $tablet-width) {
-    height: 350px;
+    min-height: 358px;
   }
 }
 
